More build cleanup.
 * Factored out shared deps and configuration to parent pom.
 * Removed unnecessary configuration by harnessing conventions where possible.

git-svn-id: https://svn.openxdata.org/Server/trunk@4887 6cddc80d-1c40-44cd-927a-2be6005847d2